# kaizo

./: .gitmodules  CMakeLists.txt
fuse/: .gitmodules  CMakeLists.txt
fuse/cmake/: AddLuaLibrary.cmake
fuse/lib/include/fuse/: Binary.h  BinaryPatch.h  BinaryStream.h  BinaryView.h  FuseException.h  Integers.h  LuaBaseLibrary.h  LuaFuseLibrary.h  Rectangle.h  UsageMap.h
fuse/lib/src/: Binary.cc  BinaryPatch.cc  BinaryStream.cc  BinaryView.cc  CMakeLists.txt  Integers.cc  LuaBaseLibrary.cc  LuaFuseLibrary.cc  LuaIntegerLayoutLoader.cc  LuaIntegerLayoutLoader.h  UsageMap.cc
fuse/lib/src/addresses/: AbsoluteOffset.cc  Address.cc  AddressFormat.cc  AddressLayout.cc  AddressMap.cc  AddressStorageFormat.cc  IdempotentAddressMap.cc  LuaAddressLibrary.cc  MipsEmbeddedLayout.cc  MipsLayout.cc  RegionAddressMap.cc  RelativeOffsetLayout.cc  RelativeStorageFormat.cc
fuse/lib/src/binary/: Address.cc  AddressMap.cc  AnnotatedBinary.cc  ArrayData.cc  ArrayFormat.cc  BinaryData.cc  BinaryFormat.cc  Data.cc  DataFormat.cc  DataPath.cc  DataPathParser.cc  DataPathParser.h  DataRangeTracker.cc  DataReader.cc  DataWriter.cc  IntegerData.cc  IntegerFormat.cc  LuaAddressLibrary.cc  LuaAddressLibrary.h  LuaBinaryLibrary.cc  LuaDataFormatLoader.cc  LuaWriter.cc  NullData.cc  PointerFormat.cc  RecordData.cc  RecordFormat.cc  StringData.cc  StringFormat.cc  UnresolvedReference.cc
fuse/lib/src/graphics/: GraphicsLuaLibrary.cc
fuse/lib/src/linking/: Backtracker.cc  Backtracker.h  Constraint.cc  ConstraintDirectory.cc  FreeBlock.cc  FreeSpace.cc  LinkObject.cc  Linker.cc  Main.cc  Target.cc  TargetMap.cc
fuse/lib/src/lua/: LuaLoader.cc  LuaReader.cc  LuaWriter.cc
fuse/lib/src/text/: AsciiEncoding.cc  LuaTableLibrary.cc  LuaTableReader.cc  LuaTableWriter.cc  ShiftJis.cc  ShiftJisToUnicode.h  StringSet.cc  Table.cc  TableControlParser.cc  TableControlParser.h  TableDecoder.cc  TableEncoder.cc  TableEntry.cc  TableParser.cc  TableReader.cc
fuse/lib/src/utilities/: CsvReader.cc  DomReader.cc  DomReaderHelpers.cc  StringCollection.cc
fuse/lib/test/unit/: CMakeLists.txt
fuse/python/: CMakeLists.txt
fuse/python/fuse/: __init__.py  addresses.py  format.py  linking.py
fuse/python/fusepy/: __init__.py  addresses.py  binary.py  data.py  format.py  objects.py
fuse/python/fusepy/src/: dataformat.cc  dataformat.h  fusepy.cc
fuse/python/src/fusepy/: addresses.cc  addresses.h  binary.cc  binary.h  data.cc  data.h  dataformat.cc  dataformat.h  fusepy.cc  fusepy.h  linking.cc  linking.h  objects.cc  objects.h  python_helpers.cc  python_helpers.h  text.cc  text.h
fuse/tools/: CMakeLists.txt
lib/: CMakeLists.txt
lib/include/kaizo/addresses/: AbsoluteOffset.h  Address.h  AddressFormat.h  AddressLayout.h  AddressMap.h  IdempotentAddressMap.h  MipsLayout.h  RegionAddressMap.h  RelativeOffsetLayout.h
lib/include/kaizo/binary/: Binary.h  BinaryPatch.h  BinaryStream.h  BinaryView.h  Integers.h
lib/include/kaizo/data/: DataRangeTracker.h  DataReader.h  DataWriter.h
lib/include/kaizo/graphics/: ImageFileFormat.h  Palette.h  PixelFormat.h  Tile.h  TileConverter.h  TileFormat.h
lib/include/kaizo/systems/: LuaSystemsLibrary.h
lib/include/kaizo/text/: AsciiEncoding.h  ShiftJis.h  StringSet.h  Table.h  TableDecoder.h  TableEncoder.h  TableEncoding.h  TableEntry.h  TableMapper.h  TableReader.h  TextEncoding.h
lib/include/kaizo/utilities/: CsvReader.h  DomReaderHelpers.h  NarrowCast.h  Rectangle.h  StringAlgorithms.h  StringCollection.h  UsageMap.h
lib/include/kaizo/vfs/: VirtualFileSystem.h
lib/src/addresses/: AbsoluteOffset.cc  Address.cc  AddressFormat.cc  AddressLayout.cc  AddressMap.cc  IdempotentAddressMap.cc  MipsLayout.cc  RegionAddressMap.cc  RelativeOffsetLayout.cc
lib/src/binary/: Binary.cc  BinaryPatch.cc  BinaryStream.cc  BinaryView.cc
lib/src/data/: DataPath.cc  DataPathParser.h  DataRangeTracker.cc  DataReader.cc  DataWriter.cc
lib/src/data/data/: ArrayData.cc  BinaryData.cc  Data.cc  IntegerData.cc  NullData.cc  RecordData.cc  ReferenceData.cc  StringData.cc
lib/src/data/formats/: ArrayFormat.cc  BinaryFormat.cc  DataFormat.cc  FormatHelpers.cc  FormatHelpers.h  IntegerFormat.cc  PointerFormat.cc  RecordFormat.cc  RelativePointerFormat.cc  StringFormat.cc
lib/src/data/linking/: Backtracker.cc  Constraint.cc  FreeBlock.cc  FreeSpace.cc  LinkObject.cc
lib/src/data/loaders/: LuaIntegerFormatLoader.cc  LuaIntegerFormatLoader.h  LuaRecordFormatLoader.h
lib/src/data/objects/: AnnotatedBinary.cc  Object.cc  (+1 more)
lib/src/graphics/: ImageFileFormat.cc  Palette.cc  PixelFormat.cc  PngFileFormat.cc  PngFileFormat.h  Tile.cc  TileConverter.cc  TileFormat.cc
lib/src/systems/: LuaSystemsLibrary.cc
lib/src/text/: AsciiEncoding.cc  ShiftJis.cc  StringSet.cc  Table.cc  TableControlParser.cc  TableControlParser.h  TableDecoder.cc  TableEncoder.cc  TableEncoding.cc  TableEntry.cc  TableMapper.cc  TableParser.cc  TableParser.h
lib/src/utilities/: CsvReader.cc  DomReader.cc  DomReaderHelpers.cc  StringCollection.cc  UsageMap.cc
lib/src/vfs/: VirtualFileSystem.cc
python/: CMakeLists.txt
python/kaizo/: __init__.py  addresses.py  psp.py  utilities.py
python/kaizo/archives/: __init__.py  io.py
python/kaizo/data/: __init__.py  data.py  formats.py  linking.py  objects.py  rw.py
python/kaizo/graphics/: __init__.py  font.py  palette.py  tile.py
python/kaizo/text/: __init__.py  table.py  tblreader.py
python/kaizo/vfs/: __init__.py  virtualfilesystem.py
python/kaizopy/: __init__.py  psp.py  text.py  vfs.py
python/kaizopy/archives/: __init__.py  io.py
python/kaizopy/data/: binary.py
python/kaizopy/graphics/: __init__.py  font.py  tile.py
python/kaizopy/text/: __init__.py  charactergrid.py  encoding.py  table.py  tblreader.py
python/kaizopy/vfs/: actions.py
python/src/kaizopy/: addresses.cc  binary.cc  data.cc  data.h  dataformat.cc  graphics.cc  graphics.h  kaizomodule.cc  kaizomodule.h  kaizopy.cc  kaizopy.h  linking.cc  objects.cc  pyutilities.cc  pyutilities.h  systems.cc  systems.h  text.cc  text.h
python/tests/: test_addresses.py  test_text.py
(+304 files in other folders)
